[build-system]
requires = ["scikit-build-core", "cython"]
build-backend = "scikit_build_core.build"

[project]
name = "plumed-python"
version = "0.0.1"
description='Python interface to PLUMED'
readme ={file="README.rst", content-type="text/x-rst"}
classifiers=[
          'Development Status :: 4 - Beta',
          'Intended Audience :: Science/Research',
          'Topic :: Scientific/Engineering :: Bio-Informatics',
          'Topic :: Scientific/Engineering :: Chemistry',
          'Topic :: Scientific/Engineering :: Physics',
          'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',
          'Programming Language :: Python :: 3',
          'Programming Language :: Python :: 3.6',
          'Programming Language :: Python :: 3.7',
  ]
authors=[{name = 'Gareth A. Tribello', email='plumed-users@googlegroups.com'}]
dependencies=["numpy", "pandas", "mpi4py", "MDAnalysis"]
#zip_safe=false #deprecated
requires-python ='>=3'
[project.urls]
Homepage='http://www.plumed.org'

[project.optional-dependencies]
#pytest is just an aggregator
test = ['pytest']
