[build-system]
requires = ["scikit-build-core", "cython"]
build-backend = "scikit_build_core.build"

[project]
name = "plumed-python"
version = "0.0.1"
description='Python interface to PLUMED'
readme ={file="README.rst", content-type="text/x-rst"}
classifiers=[
          'Development Status :: 4 - Beta',
          'Intended Audience :: Science/Research',
          'Topic :: Scientific/Engineering :: Bio-Informatics',
          'Topic :: Scientific/Engineering :: Chemistry',
          'Topic :: Scientific/Engineering :: Physics',
          'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',
          'Programming Language :: Python :: 3',
          'Programming Language :: Python :: 3.8',
          'Programming Language :: Python :: 3.9',
          'Programming Language :: Python :: 3.10',
          'Programming Language :: Python :: 3.11',
          'Programming Language :: Python :: 3.12',
  ]
authors=[{name = 'Gareth A. Tribello', email='plumed-users@googlegroups.com'}]
# The code is set up in order to have MDAnalysis "optional"
# But mpi4py needs mpi on the system, and MDA should not require non-python dependencies
dependencies=["numpy", "pandas", "MDAnalysis"]
#zip_safe=false #deprecated
requires-python ='>=3'
[project.urls]
Homepage='http://www.plumed.org'
# Documentation = "http://www.plumed.org"
# Repository = ""
# Issues = ""
# Changelog = ""

[project.optional-dependencies]
#pytest is just an aggregator for the tests
test = ['pytest']
#mpi4py needs mpi.h to be compiled, so it is set as an "optional" dependency
mpi = ['mpi4py']
